Trying to fix colour of header on mobiles

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -45,6 +45,7 @@ header.masthead {
         margin-bottom: 50px;
         @include heading-font;
         color: $primary;
+        -webkit-text-fill-color: $primary;
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: black;
       }
